cssi-web-portal/front_end/src/styles.scss
// /* You can add global styles to this file, and also import other style files */
// /* Default light theme that our website uses */
@import "@angular/material/theming";

@include mat-core();

$light-theme-primary: mat-palette($mat-indigo);
$light-theme-accent: mat-palette($mat-amber);
$light-theme-warn: mat-palette($mat-red);

$light-theme: mat-light-theme(
  $light-theme-primary,
  $light-theme-accent,
  $light-theme-warn
);

@include angular-material-theme($light-theme);

/* This is for the dark theme */
$dark-theme-primary: mat-palette($mat-grey);
$dark-theme-accent: mat-palette($mat-blue-grey);
$dark-theme-warn: mat-palette($mat-red);

$dark-theme: mat-dark-theme(
  $dark-theme-primary,
  $dark-theme-accent,
  $dark-theme-warn
);

.dark-theme {
  @include angular-material-theme($dark-theme);
}

// Example
// @use "@angular/material" as mat;

// @include mat.core();

// // Define a light theme
// $light-theme: mat.define-light-theme(
//   (
//     color: (
//       primary: mat.define-palette(mat.$indigo-palette),
//       accent: mat.define-palette(mat.$pink-palette),
//     ),
//     // Only include `typography` and `density` in the default light theme.
//     typography: mat.define-typography-config(),
//     density: 0,
//   )
// );

// // Define a dark theme
// $dark-theme: mat.define-dark-theme(
//   (
//     color: (
//       primary: mat.define-palette(mat.$grey-palette),
//       accent: mat.define-palette(mat.$blue-grey-palette),
//     ),
//   )
// );

// // Apply the dark theme by default
// @include mat.core-theme($light-theme);
// @include mat.button-theme($light-theme);

// // Apply the light theme only when the user prefers light themes.
// @media (prefers-color-scheme: dark) {
//   // Use the `-color` mixins to only apply color styles without reapplying the same
//   // typography and density styles.
//   @include mat.core-color($dark-theme);
//   @include mat.button-color($dark-theme);
// }

html,
body {
  height: 100%;
}
body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

